--- a/docs/0.5/Components.md.hbs
+++ b/docs/0.5/Components.md.hbs
@@ -5,7 +5,12 @@ In many situations, you want to encapsulate behaviour and markup into a single r
 
 First, you need to **create the component** with {{{createLink 'Ractive.extend()'}}}, which allows you to define a template, initialisation behaviour, default data, and so on. (If you're not familiar with Ractive.extend() you should read that page first.)
 
-## Initialisation Options
+* [Initiliasation Options](#init)
+* [Binding](#binding)
+* [Events](#events)
+* [The \{{>content}} Directive](#content)
+
+## <a name="init"></a>Initialisation Options
 
 ### beforeInit *`Function`*
 
@@ -142,7 +147,7 @@ new MyWidget({
 });
 ```
 
-## Binding
+## <a name="binding"></a>Binding
 
 Instead of passing a static message ('Click to activate!') through, we could have passed a dynamic one:
 
@@ -184,7 +189,7 @@ logData()
 ```
 
 
-## Events
+## <a name="events"></a>Events
 
 You can subscribe to events that emanate from a component in the normal way. For example, our widget template contains a `<div>` element with an `on-click="activate"` directive. We're listening for that event inside the MyWidget `init` method, but we can also listen for it like so:
 
@@ -251,7 +256,7 @@ Here, `Bar.foo`, `Baz.`, and `*.bippy` events will not bubble beyond the `Foo` c
 Here, no internal component events will bubble above `Foo`.
 
 
-## The `\{{>content}}` Directive 
+## <a name="content"></a>The `\{{>content}}` Directive 
 
 Any content in the template calling the component:
 
