--- a/docs/0.5/Get started.md.hbs
+++ b/docs/0.5/Get started.md.hbs
@@ -6,7 +6,7 @@ Welcome! These pages aim to provide all the information you need to master Racti
 
 If you see something wrong, out of date, or missing from this documentation, please [raise an issue on GitHub](https://github.com/ractivejs/docs.ractivejs.org/issues) or - even better - submit a pull request. Your fellow Ractive users will thank you!
 
-Using Ractive is very simple. An instance is creating using `new Ractive({...})`
+Using Ractive is very simple. An instance is created using `new Ractive({...})`
 with the desired options:
 
 ```js
