--- a/docs/0.5/Plugins.md.hbs
+++ b/docs/0.5/Plugins.md.hbs
@@ -32,6 +32,7 @@ plugin API pages under "Writing" and the [plugin template](https://github.com/Ra
 * [Drag and Drop](https://github.com/Nijikokun/ractive.drag.drop.js) - contributed by [@Nijikokun](https://github.com/Nijikokun)
 * [Drag and Drop Sortable List](https://github.com/Nijikokun/ractive.sortable.js) - contributed by [@Nijikokun](https://github.com/Nijikokun)
 * [Viewport](https://github.com/svapreddy/ractive-event-viewport) - contributed by [@svapreddy](https://github.com/svapreddy)
+* [Touch](https://github.com/rstacruz/ractive-touch) - contributed by [@rstacruz](https://github.com/rstacruz/)
 
 
 ## {{{createLink 'Transitions'}}}
