--- a/docs/0.5/Plugins.md.hbs
+++ b/docs/0.5/Plugins.md.hbs
@@ -9,6 +9,7 @@ plugin API pages under "Writing" and the [plugin template](https://github.com/Ra
 
 * [Backbone](https://github.com/ractivejs/ractive-adaptors-backbone)
 * [Promises](http://lluchs.github.io/Ractive-adaptors-Promise/) - contributed by [@lluchs](https://github.com/lluchs)
+* [Promise-alt](https://github.com/rstacruz/ractive-promise-alt) - contributed by [@rstacruz](https://github.com/rstacruz)
 * [Modella](https://github.com/staygrimm/ractive-adaptors-modella) - contributed by [@staygrimm](https://github.com/staygrimm)
 * [Bacon.js](http://ractivejs.github.io/ractive-adaptors-bacon/)
 * [RxJS](http://ractivejs.github.io/ractive-adaptors-rxjs/)
