--- a/docs/0.5/Plugins.md.hbs
+++ b/docs/0.5/Plugins.md.hbs
@@ -13,7 +13,7 @@ plugin API pages under "Writing" and the [plugin template](https://github.com/Ra
 * [Modella](https://github.com/staygrimm/ractive-adaptors-modella) - contributed by [@staygrimm](https://github.com/staygrimm)
 * [Bacon.js](http://ractivejs.github.io/ractive-adaptors-bacon/)
 * [RxJS](http://ractivejs.github.io/ractive-adaptors-rxjs/)
-* TODO Ractive (synchronise several Ractive instances)
+* [Ractive](https://github.com/rstacruz/ractive-ractive) (synchronise several Ractive instances) - contributed by [@rstacruz](https://github.com/rstacruz)
 * TODO Object.observe
 
 
