Fixed typo 'compoent' -> 'component'

--- a/docs/0.5/Components.md.hbs
+++ b/docs/0.5/Components.md.hbs
@@ -96,7 +96,7 @@ Then the resulting output would be
 Very complex example for such a simple idea but this could drastically effect you.
 
 
-init is called after the extended compoent has been initialized 
+init is called after the extended component has been initialized 
 
 ```js
 var MyWidget = Ractive.extend({
