--- a/docs/0.5/ractive.get().md.hbs
+++ b/docs/0.5/ractive.get().md.hbs
@@ -5,4 +5,4 @@ title: ractive.get()
 > Returns the value at `keypath` (see {{{createLink 'Keypaths'}}})
 
 > ### ractive.get()
-> Returns all data (the equivalent of `ractive.data`)
+> Returns all data (the equivalent of `ractive.data`). This does not include {{{createLink 'computed properties' 'Computed Properties' }}}
