Advanced config: fix a typo in the "Specifying a model" section

--- a/docs/0.5/Advanced configuration.md.hbs
+++ b/docs/0.5/Advanced configuration.md.hbs
@@ -208,7 +208,7 @@ Another use of the data option function is to provide a model:
 
 ```js
 data: function ( data ) {
-	return Model( data );
+	return new Model( data );
 }
 ```
 
