start refactoring events docs to be more manageable and include new lifecycle hooks

--- a/templates/0.6/partials/left-nav.md.hbs
+++ b/templates/0.6/partials/left-nav.md.hbs
@@ -28,7 +28,6 @@
 		<li>{{{createLink 'Keypaths'}}}</li>
 		<li>{{{createLink 'Partials'}}}</li>
 		<li>{{{createLink 'Decorators'}}}</li>
-		<li>{{{createLink 'Events'}}}</li>
 	</ul>
 	<h2>Data & Binding</h2>
 	<ul>
@@ -40,6 +39,12 @@
 		<li>{{{createLink 'Observers'}}}</li>
 		<li>{{{createLink 'Adaptors'}}}</li>
 		<li>{{{createLink 'Parallel DOM'}}}</li>
+	</ul>
+	<h2>Events</h2>
+	<ul>
+		<li>{{{createLink 'Publish/subscribe'}}}</li>
+		<li>{{{createLink 'Lifecycle events'}}}</li>
+		<li>{{{createLink 'Proxy events'}}}</li>
 	</ul>
 	<h2>Transitions and Animations</h2>
 	<ul>
