--- a/templates/0.6/partials/left-nav.md.hbs
+++ b/templates/0.6/partials/left-nav.md.hbs
@@ -45,6 +45,7 @@
 		<li>{{{createLink 'Publish/subscribe'}}}</li>
 		<li>{{{createLink 'Lifecycle events'}}}</li>
 		<li>{{{createLink 'Proxy events'}}}</li>
+		<li>{{{createLink 'Custom events'}}}</li>
 	</ul>
 	<h2>Transitions and Animations</h2>
 	<ul>
