--- a/docs/0.6/Proxy events.md.hbs
+++ b/docs/0.6/Proxy events.md.hbs
@@ -2,6 +2,8 @@
 title: 'Proxy events'
 ---
 
+*See also: {{{createLink 'method calls' 'method calls from templates'}}}*
+
 Ractive has a concept of *proxy events*, which translate a user *action* (e.g. a mouseclick) into an *intention* (e.g. 'select this option'). This allows you to handle user interaction in a readable, declarative fashion, without resorting to peppering your markup with class names to use as 'hooks' (which must then be kept consistent between your markup and your JavaScript code).
 
 As with all events in Ractive, you subscribe with {{{createLink 'ractive.on()'}}}:
@@ -60,6 +62,15 @@ In the example above, `event.keypath` might be `items.0` for the first item in t
 ## Custom events
 
 In addition to all the usual DOM events, you can use *custom events* via {{{createLink 'plugins#events' 'event plugins'}}}. For example, you could add gesture support to your app with [ractive-touch](https://github.com/rstacruz/ractive-touch), which integrates [Hammer.js](http://hammerjs.github.io/) with Ractive.
+
+
+## Chained proxy events
+
+You can assign the same proxy event to multiple DOM events by separating them with a hyphen:
+
+```html
+<div on-mouseover-mousemove='trigger'>...</div>
+```
 
 
 ## Reserved event names
