--- a/templates/0.6/partials/left-nav.md.hbs
+++ b/templates/0.6/partials/left-nav.md.hbs
@@ -28,6 +28,7 @@
 		<li>{{{createLink 'Keypaths'}}}</li>
 		<li>{{{createLink 'Partials'}}}</li>
 		<li>{{{createLink 'Decorators'}}}</li>
+		<li>{{{createLink 'Method calls'}}}</li>
 	</ul>
 	<h2>Data & Binding</h2>
 	<ul>
