--- a/docs/0.6/Ractive.defaults.md.hbs
+++ b/docs/0.6/Ractive.defaults.md.hbs
@@ -12,12 +12,12 @@ Ractive.defaults.delimiters = [ '[[', ']]' ];
 
 // uses the delimiters specified above
 ractive1 = new Ractive({
-	template: 'hello [[world]]`
+	template: 'hello [[world]]'
 });
 
-// uses the delimters specified in the init options
+// uses the delimiters specified in the init options
 rative2 = new Ractive({
-	template: 'hello //world\\`,
+	template: 'hello //world\\',
 	delimiters: [ '//', '\\' ]
 });
 ```
