--- a/docs/0.6/Proxy events.md.hbs
+++ b/docs/0.6/Proxy events.md.hbs
@@ -61,7 +61,7 @@ In the example above, `event.keypath` might be `items.0` for the first item in t
 
 ## Custom events
 
-In addition to all the usual DOM events, you can use *custom events* via {{{createLink 'plugins#events' 'event plugins'}}}. For example, you could add gesture support to your app with [ractive-touch](https://github.com/rstacruz/ractive-touch), which integrates [Hammer.js](http://hammerjs.github.io/) with Ractive.
+In addition to all the usual DOM events, you can use *custom events* via {{{createLink 'plugins' 'event plugins'}}}. For example, you could add gesture support to your app with [ractive-touch](https://github.com/rstacruz/ractive-touch), which integrates [Hammer.js](http://hammerjs.github.io/) with Ractive.
 
 
 ## Chained proxy events
