--- a/templates/0.6/partials/left-nav.md.hbs
+++ b/templates/0.6/partials/left-nav.md.hbs
@@ -6,6 +6,7 @@
 		<li>{{{createLink 'Get support'}}}</li>
 		<li>{{{createLink 'Contributing'}}}</li>
 		<li>{{{createLink 'Get started with node.js'}}}</li>
+		<li>{{{createLink 'Migrating' 'Migrating from previous versions'}}}</li>
 	</ul>
 </section>
 
