--- a/docs/0.6/Ractive.partials (instance).md.hbs
+++ b/docs/0.6/Ractive.partials (instance).md.hbs
@@ -3,7 +3,7 @@ title: ractive.partials
 ---
 Instance-specific {{{createLink 'partials'}}} exist as properties of `ractive.partials`.
 
-Ordinarily, these are declared as an {{{createLink 'initialisation options' 'initialisation option'}}}. However it is possible, should you need to, to add or replace these partials (obviously, doing so wouldn't affect partials that were already rendered):
+Ordinarily, these are declared as an {{{createLink 'options' 'initialisation option'}}}. However it is possible, should you need to, to add or replace these partials (obviously, doing so wouldn't affect partials that were already rendered):
 
 ```js
 ractive.partials.rickroll = '<iframe width="420" height="315" src="http://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>'
