change to get gh-pages to update

--- a/docs/0.6/Migrating.md.hbs
+++ b/docs/0.6/Migrating.md.hbs
@@ -14,7 +14,7 @@ Ractive instances now emit *lifecycle events*. If you use `Ractive.extend(...)` 
 
 The `init()` method also no longer recieves an `options` parameter as the ractive instance now inherits _all_ options passed to the constructor. You can still access the options directly using the `onconstruct()` method.
 
-`beforeInit()` and `complete()` can be replaced directly with `onconstruct()` and `oncomplete()` respectively
+`beforeInit()` and `complete()` can be replaced directly with `onconstruct()` and `oncomplete()` respectively.
 
 See the {{{createLink 'lifecycle events'}}} page for more detail.
 
