--- a/templates/0.6/partials/left-nav.md.hbs
+++ b/templates/0.6/partials/left-nav.md.hbs
@@ -137,6 +137,7 @@
 		<li><a href='../0.3.9'>0.3.9</a></li>
 		<li><a href='../0.4.0'>0.4.0</a></li>
 		<li><a href='../0.5'>0.5</a></li>
+		<li><a href='../0.6'>0.6</a></li>
 		<li><a href='../edge'>edge</a></li>
 	</ul>
 </section>
