add event bubbling page

--- a/templates/0.6/partials/left-nav.md.hbs
+++ b/templates/0.6/partials/left-nav.md.hbs
@@ -45,6 +45,7 @@
 	<h2>Events</h2>
 	<ul>
 		<li>{{{createLink 'Publish/subscribe'}}}</li>
+		<li>{{{createLink 'Event bubbling'}}}</li>
 		<li>{{{createLink 'Lifecycle events'}}}</li>
 		<li>{{{createLink 'Proxy events'}}}</li>
 		<li>{{{createLink 'Custom events'}}}</li>
