--- a/docs/0.6/Publish-subscribe.md.hbs
+++ b/docs/0.6/Publish-subscribe.md.hbs
@@ -17,6 +17,8 @@ ractive.on( 'activate', function () {
 });
 ```
 
+Events will be automatically unsubsribed.
+
 There are different types of events:
 
 <ul>
@@ -24,12 +26,6 @@ There are different types of events:
 <li>{{{createLink 'Proxy events'}}} - which are defined in your template, and proxy DOM events</li>
 <li>{{{createLink 'Custom events'}}}, which could be anything you like</li>
 </ul>
-
-
-## Event bubbling
-
-If a component fires an event, it will bubble - [see this demonstration](http://jsfiddle.net/rich_harris/cdvehp1t/).
-
 
 ## Hygiene
 
@@ -58,3 +54,10 @@ ractive.off( 'activate', handler );
 ```
 
 In the second case, note that if you don't specify a handler, all 'activate' handlers will be removed. If you don't specify an event name, **all** event handlers will be removed from the instance. See {{{createLink 'ractive.off()'}}} for more detail.
+
+The `ractive.off()` method is chainable for easily replacing subscribtions:
+
+```js
+ractive.off( 'activate' ).on( 'activate', function () {...} );
+```
+
