--- a/docs/0.6/ractive.off().md.hbs
+++ b/docs/0.6/ractive.off().md.hbs
@@ -9,6 +9,7 @@ An alternative way to remove event handlers is to use the `cancel` method of the
 
 
 > ### ractive.off([ eventName[, handler ]])
+> Returns the `ractive` instance to allow this call to be chainable.
 > > #### eventName *`String`*
 > > The event name to which this handler is currently bound
 > > #### handler *`Function`*
