--- a/templates/0.6/partials/left-nav.md.hbs
+++ b/templates/0.6/partials/left-nav.md.hbs
@@ -29,7 +29,6 @@
 		<li>{{{createLink 'Keypaths'}}}</li>
 		<li>{{{createLink 'Partials'}}}</li>
 		<li>{{{createLink 'Decorators'}}}</li>
-		<li>{{{createLink 'Method calls'}}}</li>
 	</ul>
 	<h2>Data & Binding</h2>
 	<ul>
@@ -44,11 +43,13 @@
 	</ul>
 	<h2>Events</h2>
 	<ul>
+		<li>{{{createLink 'Events overview' 'Overview'}}}</li>
+		<li>{{{createLink 'Event directives'}}}</li>
+		<li>{{{createLink 'Proxy events'}}}</li>
+		<li>{{{createLink 'Method calls'}}}</li>
 		<li>{{{createLink 'Publish/subscribe'}}}</li>
 		<li>{{{createLink 'Event bubbling'}}}</li>
 		<li>{{{createLink 'Lifecycle events'}}}</li>
-		<li>{{{createLink 'Proxy events'}}}</li>
-		<li>{{{createLink 'Custom events'}}}</li>
 	</ul>
 	<h2>Transitions and Animations</h2>
 	<ul>
