--- a/docs/0.6/Method calls.md.hbs
+++ b/docs/0.6/Method calls.md.hbs
@@ -2,7 +2,9 @@
 title: 'Method calls'
 ---
 
-As an alternative to {{{createLink 'proxy events'}}}, you can call any method of your Ractive instance, in response to a DOM event, right from your template:
+*See also: {{{createLink 'proxy events'}}}*
+
+As an alternative to {{{createLink 'proxy events'}}}, you can call any method of your Ractive instance, in response to an {{{createLink 'event directives' 'event directive'}}}, right from your template:
 
 ```html
 <p>foo is \{{foo}}</p>
@@ -30,6 +32,12 @@ You can pass as many arguments to the method as you like, including data referen
 \{{#each items :i}}
   <button on-click='select(this,i)'>select this item</button>
 \{{/each}}
+```
+
+Notice that mustaches are __not__ used with data reference in method calls, i.e. `\{{i}}` and will cause errors if they are. String literals need to be in quotes:
+
+```html
+<button on-click='set( "foo", true)'>make foo true</button>
 ```
 
 You can also pass the `event` object, or properties thereof (`event.original` is the original DOM event) ([demo](http://jsfiddle.net/rich_harris/9ecvjjtm/)):
