--- a/docs/0.6/Proxy events.md.hbs
+++ b/docs/0.6/Proxy events.md.hbs
@@ -4,9 +4,9 @@ title: 'Proxy events'
 
 *See also: {{{createLink 'method calls' 'method calls from templates'}}}*
 
-Ractive has a concept of *proxy events*, which translate a user *action* (e.g. a mouseclick) into an *intention* (e.g. 'select this option'). This allows you to handle user interaction in a readable, declarative fashion, without resorting to peppering your markup with class names to use as 'hooks' (which must then be kept consistent between your markup and your JavaScript code).
+Ractive has a concept of *proxy events*, which translate a user *action* (e.g. a mouseclick) defined via an {{{createLink 'event directives' 'event directive'}}} into an *intention* (e.g. 'select this option'). This allows you to handle user interaction in a readable, declarative fashion, without resorting to peppering your markup with class names to use as 'hooks' (which must then be kept consistent between your markup and your JavaScript code).
 
-As with all events in Ractive, you subscribe with {{{createLink 'ractive.on()'}}}:
+As with all events in Ractive, you subscribe with {{{createLink 'ractive.on()'}}} (also see {{{createLink 'publish-subscribe'}}}). Proxy events declare the handler name of the event that will be fired, along with any optional arguments:
 
 ```js
 ractive = new Ractive({
@@ -19,10 +19,28 @@ ractive.on( 'activate', function ( event ) {
 });
 ```
 
+In this example, it is `activate` (and not `click`!) that is the name of the handler event that will be fired for any registered handlers created via {{{createLink 'ractive.on()'}}}.
 
 ## Event arguments
 
-We might want to pass arguments to our handler in addition to the `event` object (see below). We can do that by listing them, comma-separated, after the event name:
+### The `event` object
+
+The first argument to a proxy event handler is always a Ractive `event` object. It contains various properties:
+
+* `event.name` - the name of the event, in this case 'activate'
+* `event.node` - the DOM node in question
+* `event.keypath` - the {{{createLink 'Keypaths' 'keypath'}}} of the current context
+* `event.context` - the value of `this.get(event.keypath)`
+* `event.index` - a map of index references
+* `event.component` - the component that raised the event, only present on {{{createLink 'event bubbling' 'bubbled events'}}}
+
+In the example above, `event.keypath` might be `items.0` for the first item in the list, `items.1` for the second, and so on. The `event.index` map would have a property `i`, which would correspond to those indices.
+
+The event object is also available in event handlers using `this.event`, see {{{createLink 'publish-subscribe' 'publish-subscribe' 'accessing-the-event-object'}}} for more details.
+
+### Custom arguments
+
+We might want to pass arguments to our handler in addition to the `event` object. We can do that by listing them, comma-separated, after the event name:
 
 ```html
 <h1>Let's shop!</h1>
@@ -45,34 +63,29 @@ ractive.on( 'addToCart', function ( event, item, qty ) {
 });
 ```
 
+### Cancelling DOM events
 
-## The `event` object
+If you return 'false' from a proxy event handler, ractive will automatically call both `preventDefault()` and `stopPropagation()` on the original DOM event.
 
-The first argument to a proxy event handler is always a Ractive `event` object (you can also use `this.event` - they are the same). It contains various properties:
-
-* `event.name` - the name of the event, in this case 'activate'
-* `event.node` - the DOM node in question
-* `event.keypath` - the {{{createLink 'Keypaths' 'keypath'}}} of the current context
-* `event.context` - the value of `this.get(event.keypath)`
-* `event.index` - a map of index references
-
-In the example above, `event.keypath` might be `items.0` for the first item in the list, `items.1` for the second, and so on. The `event.index` map would have a property `i`, which would correspond to those indices.
-
-
-## Custom events
-
-In addition to all the usual DOM events, you can use *custom events* via {{{createLink 'plugins' 'event plugins'}}}. For example, you could add gesture support to your app with [ractive-touch](https://github.com/rstacruz/ractive-touch), which integrates [Hammer.js](http://hammerjs.github.io/) with Ractive.
-
-
-## Chained proxy events
-
-You can assign the same proxy event to multiple DOM events by separating them with a hyphen:
-
-```html
-<div on-mouseover-mousemove='trigger'>...</div>
-```
+Note that returning `false` has a duel purpose of both cancelling the view hierarchy {{{createLink 'Event bubbling' 'event bubbling'}}} __as well as__ cancelling the DOM Event if the event was DOM-based.
 
 
 ## Reserved event names
 
 Note: the built-in {{{createLink 'lifecycle events'}}} are **reserved**, which means you can't use their names as proxy events.
+
+
+## Dynamic proxy event names
+
+{{{createLink 'Mustaches' 'Mustache references'}}} can be used as proxy event names:
+
+```html
+<button on-click="\{{handler}}">click me!</button>
+```
+
+In practive this is of limited value, but a more important side effect is that if no handler is specified (a falsey value) the DOM event is not subscribed and will unsubscribe or resubscribe as the handler value changes. Combined with a conditional section, this allows a proxy event to be conditionally subscribed _at the DOM level_:
+
+```html
+<button on-click="\{{#active}}select\{{/}}">click me!</button>
+```
+In this example, the DOM `click` event is subscribed and unsubscribed as the value of `active` is truthy or falsey.
