--- a/docs/0.6/Expressions.md.hbs
+++ b/docs/0.6/Expressions.md.hbs
@@ -36,7 +36,7 @@ Or it could mean filtering a list to exclude certain records:
 These are all examples casually plucked from the air - whether they would be useful or not in real life depends on what you're trying to do. The point is that you can include more of your view logic at the declarative layer - the template - where it's easier to *reason about*.
 
 ## Frequently Used Expressions
- 
+
 If you use a particular expression frequently, you can save time by adding it Ractive's default data. This way you won't have to set up the expressions on each individual `ractive` instance.
 
 The example below adds expressions for some frequenlty used parts of [moment.js](http://momentjs.com/) to the default data:
@@ -130,7 +130,6 @@ In regular mustache, we have something called the *implicit iterator* - `\{{.}}`
 * `parseInt`
 * `undefined`
 
-
 ## Functions
 
 Any functions that you want to call, outside of the available globals above, must be properties of the Ractive instance's data as well. Functions can also depend on other references and will be re-evaulated when one of their dependencies is changed.
@@ -168,4 +167,28 @@ ractive.set('user.firstName', 'Jane')
 Result:
 ```html
 <p>Public, Jane</p>
+```
+
+## Functions on helper objects and third-party libraries
+
+You can also add helper objects to your data and call functions on those objects in expressions. For example, you could add a reference to [underscore.js](http://underscorejs.org/):
+
+```js
+var ractive = new Ractive({
+  template: template,
+  el: output,
+  data: {
+    items: [ 2, 10, 200, 3, 1, 4],
+    _: _
+  }
+};
+```
+
+And use that to sort an array in your template:
+
+```html
+\{{# _.sortBy(items) }}\{{.}}, \{{/}}
+
+<!-- Result: -->
+1, 2, 3, 4, 10, 200,
 ```
